--- a/components/book-show/index.less
+++ b/components/book-show/index.less
@@ -1,4 +1,5 @@
 .book-item{
+  border: 1px solid #eee;
   width: 250px;
   display: inline-block;
   margin: 15px 17px;
@@ -24,4 +25,7 @@
   .book-show{
     text-align: center;
   }
+}
+.book-item:hover{
+  border: 1px solid #409EFF;
 }
