--- a/components/book-show/index.less
+++ b/components/book-show/index.less
@@ -1,31 +1,33 @@
-.book-item{
-  border: 1px solid #eee;
-  width: 250px;
-  display: inline-block;
-  margin: 15px 17px;
-  box-shadow: 0 8px 16px 0 rgba(7,17,27,.1);
-  .book-img{
-    position: relative;
-    text-align: center;
+.bookShow {
+  .book-item {
+    border: 1px solid #eee;
     width: 250px;
-    .book-menu{
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      background-color: #409EFF;
-      color: black;
-      button{
+    display: inline-block;
+    margin: 15px 17px;
+    box-shadow: 0 8px 16px 0 rgba(7, 17, 27, .1);
+    .book-img {
+      position: relative;
+      text-align: center;
+      width: 250px;
+      .book-menu {
+        position: absolute;
+        bottom: 0;
         width: 100%;
-        margin-left: 0!important;
+        display: flex;
+        justify-content: center;
+        background-color: #409EFF;
+        color: black;
+        button {
+          width: 100%;
+          margin-left: 0 !important;
+        }
       }
     }
+    .book-show {
+      text-align: center;
+    }
   }
-  .book-show{
-    text-align: center;
+  .book-item:hover {
+    border: 1px solid #409EFF;
   }
-}
-.book-item:hover{
-  border: 1px solid #409EFF;
 }
