--- a/pages/login/login.less
+++ b/pages/login/login.less
@@ -1,4 +1,8 @@
-
+.login-main{
+  height: 695px;
+  background-image: url("../../static/img/login_bg.jpg");
+  background-size: cover;
+}
 
 .login{
   position: absolute;
